--- a/front/src/index.css
+++ b/front/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h2 {
+  text-align: center;
+}
+
+/* CARD PRODUIT */
+.Home {
+  padding: 20px;
+  justify-content: center;
+}
+
+.title-margin {
+  margin-bottom: 70px;
+}
+
+.mycard2 {
+  margin-bottom: 50px;
+}
