--- a/front/src/index.css
+++ b/front/src/index.css
@@ -16,7 +16,7 @@ h2 {
   text-align: center;
 }
 
-/* CARD PRODUIT */
+/* Card produit */
 .Home {
   padding: 20px;
   justify-content: center;
@@ -29,3 +29,88 @@ h2 {
 .mycard2 {
   margin-bottom: 50px;
 }
+
+/* Panier */
+
+.panier {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+}
+
+.panier h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.panier h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.panier ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.panier li {
+  margin-bottom: 10px;
+}
+
+.panier button {
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  font-size: 14px;
+  cursor: pointer;
+  float: right;
+}
+
+.panier button:hover {
+  background-color: #c82333;
+}
+
+.panier button:focus {
+  outline: none;
+}
+
+/* Notification */
+
+.notification {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.notification.show {
+  opacity: 1;
+}
+
+.notificationDelete {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  background-color: #ca1515;
+  color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.notificationDelete.show {
+  opacity: 1;
+}
+
+
