--- a/front/src/index.css
+++ b/front/src/index.css
@@ -113,4 +113,99 @@ h2 {
   opacity: 1;
 }
 
+.panier .ValiderPanier {
+  background-color: #0a922c;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  font-size: 14px;
+  cursor: pointer;
+  float: right;
+}
+
+.panier .ValiderPanier:hover {
+  background-color: #1ce247;
+}
+
+.panier .ValiderPanier:focus {
+  outline: none;
+}
+
+/* Catégorie */
+
+.categories {
+  margin-bottom: 20px;
+}
+
+.categories h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.categories ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.categories li {
+  display: inline-block;
+  margin-right: 10px;
+  cursor: pointer;
+  color: #333;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #f0f0f0;
+  transition: background-color 0.3s ease;
+}
+
+.categories li:hover {
+  background-color: #ccc;
+}
+
+/* AdminProduit Form */
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.create h3 {
+  margin-bottom: 20px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.create label {
+  display: block;
+  margin-top: 15px;
+}
+
+.create input {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+.create button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-top: 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.create button:hover {
+  background-color: #0056b3;
+}
 
